# mlayout

./: Cargo.toml  TODO  build.rs
examples/: freetype_renderer.rs  svg_boxes.rs
mathimg/: Cargo.toml  test.sh
mathimg/src/: main.rs  svg_renderer.rs
src/: lib.rs  mathmlparser.rs  tree.rs  tree_iter.rs  tree_trait.rs  types.rs  typesetting.rs
src/layout_v2/: expression_tree.rs  field.rs  layout.rs  mod.rs
src/mathmlparser/: error.rs  escape.rs  mod.rs  operator.rs  operator_dict.rs  token.rs  xml_reader.rs
src/typesetting/: font.rs  layout.rs  lazy_vec.rs  math_box.rs  mod.rs  multiscripts.rs  shaper.rs  stretchy.rs  unicode_math.rs
table_gen/: Cargo.toml
table_gen/src/: main.rs
tests/: font_tests.rs  lib.rs  util.rs
tests/testfiles/: (x).xml  Vaccent.xml  accents.xml  asp.xml  cauchy.xml  euler.xml  frac.xml  horizontal_glyphs.xml  horizontal_stretch.xml  integrals.xml  italic_sup.xml  limit.xml  math_kern.xml  parentheses.xml  pythagoras.xml  root.xml  schrödinger.xml  simple.xml  stokes.xml  sum.xml  trivial.xml
