[package]
name = "math-render"
version = "0.1.0"
authors = ["Manuel Reinhardt <manuel.jr16@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
quick-xml = { version = "0.4", optional = true }
harfbuzz_rs = { git = "https://github.com/manuel-rhdt/harfbuzz_rs.git" }
bitflags = "^1"
stash = "*"

[dev-dependencies]
image = "*"
svg = "0.5.1"
freetype-rs = "0.11.0"

[build-dependencies]
serde = "1.0.110"
serde_json = "1.0.53"

[features]
# default = ["mathml_parser"]
mathml_parser = ["quick-xml"]

[workspace]
members = ["mathimg"]
